Fix overflow after rebase

--- a/ui/components/ui/account-list/index.scss
+++ b/ui/components/ui/account-list/index.scss
@@ -36,6 +36,7 @@
   &__wrapper {
     display: flex;
     overflow: hidden;
+    width: 100%;
   }
 
   &__list {
